Styles page for home added

--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
   "main": "next.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/humma-irshad/community-server-frontend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/humma-irshad/community-server-frontend/issues"
+  },
+  "homepage": "https://github.com/humma-irshad/community-server-frontend#readme"
 }
