--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.5.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "http-server": "^14.1.1",
     "next": "^13.4.7",
     "nextjs-routes": "^2.0.1",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
@@ -39,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/humma-irshad/community-server-frontend/issues"
   },
-  "homepage": "https://github.com/humma-irshad/community-server-frontend#readme"
+  "homepage": "https://github.com/humma-irshad/community-server-frontend#readme",
+  "devDependencies": {
+    "@types/pdf-viewer-reactjs": "^2.2.4"
+  }
 }
